# vbi-cli

./: .gitignore  LICENSE  README.md  SECURITY.md  install.ps1  pyproject.toml
docs/: DATA_CONTRACT.md  PROVIDER_ADAPTERS.md
scripts/: smoke_audit.py  smoke_install.py  smoke_mcp.py
vbi/: __init__.py  __main__.py  _farewell.py  audit.py  cache.py  cli.py  contracts.py  dashboard.py  export_cmd.py  live.py  map_cmd.py  registry.py  runtime_cmd.py  splash.py  terminal.py  update_cmd.py
vbi/inventory/: __init__.py  heuristics.py  mcp_utils.py  records.py  registry.py  render.py
vbi/mcp/: __init__.py  install.py  server.py
vbi/providers/: antigravity.py  claude_code.py  codex_cli.py  gemini_cli.py  opencode.py  unavailable.py
