[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vbi-cli"
version = "0.1.0"
description = "Local-first terminal AI usage inspection CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "pyfiglet>=1.0",
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
vbi = "vbi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vbi*"]
